Add title in html

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
   <![endif]-->
 
     <!-- Add your site or application content here -->
+    <h1>BONJOUR</h1>
     <div id='partition'></div>
 </body>
 
